--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>My GitHub Page</title>
+     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
+     <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
-     <h1>Welcome to My Website!</h1>
-     <p>This is hosted on GitHub Pages.</p>
+     <script>
+          $(function () {
+               // Initialization code
+               $('ons-button').on('click', function (e) {
+                    ons.notification.alert('Button is tapped!');
+               })
+          });
+     </script>
+     <ons-button>Click me!</ons-button>
 </body>
 
 </html>
