--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
      <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
      <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
      <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
+     <title>Coffee Menu (Mirai)</title>
 </head>
 
 <body>
      <script>
-          $(function () {
-               // Initialization code
+          $(document).ready(function () {
                $('ons-button').on('click', function (e) {
                     ons.notification.alert('Button is tapped!');
-               })
+               });
           });
      </script>
      <ons-button>Click me!</ons-button>
